<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.apptimistiq.android.fitstreak.main.recipe.RecipeViewModel" />
        <import type="android.view.View"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:paddingTop="@dimen/fragment_top_padding"
        android:paddingBottom="@dimen/fragment_bottom_padding"
        tools:context=".main.MainActivity">

        <HorizontalScrollView
            android:id="@+id/diet_type_scroll_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:scrollbars="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/diet_type_chip_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:chipSpacing="8dp"
                app:singleLine="true"
                app:selectionRequired="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_vegetarian"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:padding="16dp"
                    android:textSize="16sp"
                    android:text="Vegetarian" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_vegan"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:textSize="16sp"
                    android:text="Vegan" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_paleo"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:textSize="16sp"
                    android:text="Paleo" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_keto"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:textSize="16sp"
                    android:text="Keto" />
            </com.google.android.material.chip.ChipGroup>
        </HorizontalScrollView>
        <!-- Shimmer Layout -->
        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmer_layout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/diet_type_scroll_view"
            android:visibility="@{viewModel.isLoading ? View.VISIBLE : View.GONE}">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <include layout="@layout/shimmer_recipe_parent_item" />
                <include layout="@layout/shimmer_recipe_parent_item" />
                <include layout="@layout/shimmer_recipe_parent_item" />
                <include layout="@layout/shimmer_recipe_parent_item" />
            </LinearLayout>
        </com.facebook.shimmer.ShimmerFrameLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recipe_parent_recycler_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:visibility="@{viewModel.isQuotaExceeded ? View.GONE : View.VISIBLE}"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/diet_type_scroll_view"
            app:listData="@{viewModel.recipeTrackList}" />

        <TextView
            android:id="@+id/quota_exceeded_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:gravity="center"
            android:text="Daily quota for viewing recipes has been exhausted. Please try again tomorrow."
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="@{viewModel.isQuotaExceeded ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/diet_type_scroll_view" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>