<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@id/daily_progress_fragment"
        android:icon="@drawable/ic_home_outline"
        android:title="@string/home" />

    <item
        android:id="@id/recipeFragment"
        android:icon="@drawable/ic_recipe_outline"
        android:title="@string/recipe" />

    <item
        android:id="@id/dashboardFragment"
        android:icon="@drawable/ic_outline_dashboard"
        android:title="@string/dashboard" />


</menu>